--- a/to_do_app/todo/templates/task_list.html
+++ b/to_do_app/todo/templates/task_list.html
@@ -3,7 +3,7 @@
 
 <div class="header-bar">
   <div>
-    <h1>HELLO {{request.user|title}}</h1>
+    <h1>HELLOO {{request.user|title}}</h1>
     <h3>you have <i>{{count}}</i> incomplete task{{count|pluralize:'s'}}</h3>
   </div>
 {% if user.is_authenticated %}
