--- a/to_do_app/todo/templates/register.html
+++ b/to_do_app/todo/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
 <div class="header-bar">
-    <h1>Register page</h1>
+    <h1>Register page h</h1>
  </div>
 <div class="card-body">
     
